test/mutation_analysis/s0152_maximum_product_subarray/hafis/starchat/mutants/13/result.txt
./test/mutation_analysis/s0152_maximum_product_subarray/hafis/starchat/mutants/13/Solution.java:36: error: unreachable statement
        return ans;
        ^
1 error
